[package]
name = "robo-swarm"
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
opt-level = 0

[profile.release]
# lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
] }
bevy_asset_loader = { version = "0.18" }
bevy_rapier2d = { version = "0.23", features = ["debug-render-2d"] }
winit = { version = "0.28.7", default-features = false }
image = { version = "0.24", default-features = false }
bevy_ecs_ldtk = "0.8"
# getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8" }
bevy-inspector-egui = "0.21.0"
bevy_easings = "0.12.2"

[build-dependencies]
embed-resource = "1.4"

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/divark/bevy_ecs_tilemap", branch = "0.12-fixes" }
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk.git", branch = "feat/bevy-0.12" }
